--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,23 +18,27 @@ jobs:
           node-version-file: '.nvmrc'
           cache: npm
 
-      - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+      - name: Build Electron app
+        run: scripts/build-release.sh linux
 
-      - name: Build misc
-        run: npm run build:graphql-docs && npm run build:bruno-query && npm run build:bruno-common
+      - name: Upload
+        run: scripts/upload-release.sh
 
-      - name: Build sandbox bundle
-        run: npm run sandbox:bundle-libraries --workspace=packages/bruno-js
+  mac-package:
+    runs-on: macos-latest
 
-      - name: Build web
-        run: npm run build:web
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+          cache: npm
 
       - name: Build Electron app
-        run: npm run build:electron:linux && npm run build:electron:mac
+        run: scripts/build-release.sh mac
 
-      - name: List build
-        run: ls -la packages/bruno-electron/out
-
-      - name: Extract version
-        run: jq -r '"VERSION=v\(.version)"' packages/bruno-electron/package.json >> "$GITHUB_ENV"
+      - name: Upload
+        run: scripts/upload-release.sh
