--- a/packages/bruno-electron/package.json
+++ b/packages/bruno-electron/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "dev": "electron .",
-    "dist:mac": "electron-builder --mac --config electron-builder-config.js",
+    "dist:mac": "CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac --config electron-builder-config.js -c.mac.identity=null",
     "dist:win": "electron-builder --win --config electron-builder-config.js",
     "dist:linux": "electron-builder --linux AppImage --config electron-builder-config.js",
     "dist:deb": "electron-builder --linux deb --config electron-builder-config.js",
